--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,13 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/acss?useSSL=false
+    url: jdbc:mysql://localhost:3306/acss?characterEncoding=utf-8&useSSL=false
     username: root
     password:
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        dialect: scujcc.acss.configuration.MysqlConfiguration
